--- a/less/CTA.less
+++ b/less/CTA.less
@@ -26,13 +26,13 @@ header{
     @media @tablet {
         display: flex;
         flex-direction: column;
-        width: 121%;
+        width: 100%;
     }
 
     @media @smaller{
         display: flex;
         flex-direction: column;
-        width: 121%;
+        width: 100%;
 }
 }
 
@@ -81,7 +81,7 @@ h1{
     }
 
     @media @tablet{
-        font-size: 3rem;
+        font-size: 1.4rem !important;
     }
 
     @media @smaller{
